fix: fixed overflow-y issue on every section

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
 }
 
 section {
-  @apply overflow-x-hidden
+  @apply overflow-hidden
 }
 
 .glow:hover {
